# vita-

./: .env.example  .gitignore  .prettierignore  ASSET_REGISTER.csv  DATASET_REGISTER.md  MODEL_REGISTER.md  README.md  THIRD_PARTY_NOTICES.md  Vita_AI_PRODUCT_SPEC.md  compose.yaml  eslint.config.mjs  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  pages.yml
apps/ai-service/: Dockerfile  pyproject.toml
apps/ai-service/src/vita_ai_service/: __init__.py  config.py  main.py
apps/ai-service/tests/: test_health.py
apps/api/: Dockerfile  package.json  tsconfig.build.json  tsconfig.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/health/: health.controller.ts  health.service.spec.ts  health.service.ts
apps/api/src/platform/config/: config.module.ts
apps/api/src/platform/infrastructure/: infrastructure.module.ts
apps/mobile/: app.json  package.json
apps/mobile/app/: +html.tsx  _layout.tsx  index.tsx
apps/mobile/public/: manifest.json  sw.js
apps/mobile/src/: environment.test.ts  exercise-library.ts  exercise-types.ts  food-analysis.ts  use-vita-data.ts  vita-data.test.ts  vita-data.ts
apps/mobile/src/onboarding/: OnboardingFlow.tsx  calculations.ts  components.tsx  schema.ts  types.ts
docs/decisions/: 0001-architecture.md
docs/implementation/: phase-0.md
netlify/functions/: food-analysis.js
scripts/: prepare-netlify.js
