[project]
name = "vita-ai-service"
version = "0.1.0"
description = "Vita AI model-service boundary"
requires-python = ">=3.12"
dependencies = ["fastapi==0.128.0", "pydantic-settings==2.12.0", "uvicorn[standard]==0.40.0"]

[project.optional-dependencies]
dev = ["httpx==0.28.1", "pytest==9.0.2", "ruff==0.14.13"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
